reply-local/singlenode.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
spec:
  template:
    spec:
      affinity:
        podAntiAffinity:
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  template:
    spec:
      affinity:
        podAntiAffinity:
